# tv_llm-poc

./: .gitignore  README.md  ai_generated_script.py  apilist.txt  config.py  llms.txt  llms_instructions.txt  pyproject.toml  test.ipynb
data/examples/: _template.py
data/examples/cv/: hands_attract.py  pose_attract.py  show_camera.py  slime_camera.py  slime_camera_iml.py
data/examples/draw/: img_to_pixels.py  pil_text_to_pixels.py  rect.py  ruler.py  see_flock.py
data/examples/export/: record_video.py  save_png.py
data/examples/iml/: iml_flock_fun2fun.py  iml_flock_vec2vec.py  iml_visualisation.py
data/examples/live/: sardine.py
data/examples/osc/: osc_attractor.py  osc_flock.py  osc_flock_iml.py  oscmap_manual.py  tv_oscmap.py
data/examples/other/: asterboids.py  dualsense.py
data/examples/rave/: iml_mppose_to_rave.py  iml_particles_to_rave.py
data/examples/signalflow/: corpus.py
data/examples/state/: draw_species.py  draw_species_live.py  states_from_vec.py
data/examples/taichi/: kernel_particle_distances.py
data/examples/vera/: class_template.py  flock.py  forces.py  gol.py  gol_flock.py  particle_life.py  reaction_diffusion.py  slime.py  slime_flock.py  swarm.py  weights.py
data/references/: context.md  cv.md  dualsense.md  iml.md  npndarray_dict.md  particles.md  patches.md  pixels.md  rec.md  sketchbook.md  species.md  state.md  taichi_.md  tolvera_.md  utils.md
data/references/mp/: face.md  face_mesh.md  (+3 more)
demo/: streamlit_demo_flow.mov
llm/: api.py  app.py  test.ipynb
src/tolvera/: main.py  version.py
src/tolvera_poc/: main.py
(+40 files in other folders)
