[project]
name = "tv-llm-poc"
version = "0.1.0"
description = ""
authors = [
    {name = "Kanak Tanwar",email = "kanaktanwarpro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "streamlit (>=1.43.2,<2.0.0)",
    "langchain[openai] (>=0.3.20,<0.4.0)",
    "langgraph (>=0.3.11,<0.4.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "tolvera (>=0.1.0rc15.post1,<0.2.0)",
    "llms-txt (>=0.0.4,<0.0.5)",
    "pysymbol-llm (>=0.0.5,<0.0.6)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
